--- a/Animated Background Gradient.html
+++ b/Animated Background Gradient.html
@@ -4,34 +4,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <style>
         body {
-            background-color: #000000;
-            padding: 0px;
-            margin: 0px;
+            margin: 0;
+            overflow: hidden;
         }
         #gradient {
             width: 100%;
-            height: 800px;
-            padding: 0px;
-            margin: 0px;
+            height: 100vh;
+            position: absolute;
         }
     </style>
 </head>
 <body>
     <div id="gradient"></div>
     <script>
-        var colors = new Array(
+        var colors = [
             [62, 35, 255],
             [60, 255, 60],
             [255, 35, 98],
             [45, 175, 230],
             [255, 0, 255],
-            [255, 128, 0]);
+            [255, 128, 0]
+        ];
 
         var step = 0;
         var colorIndices = [0, 1, 2, 3];
         var gradientSpeed = 0.002;
-        function updateGradient() {
 
+        function updateGradient() {
             if ($ === undefined) return;
 
             var c0_0 = colors[colorIndices[0]];
@@ -55,16 +54,35 @@
             }).css({
                 background: "-moz-linear-gradient(left, " + color1 + " 0%, " + color2 + " 100%)"
             });
+
             step += gradientSpeed;
+
             if (step >= 1) {
                 step %= 1;
                 colorIndices[0] = colorIndices[1];
                 colorIndices[2] = colorIndices[3];
+
+                // Randomly select the next colors
                 colorIndices[1] = (colorIndices[1] + Math.floor(1 + Math.random() * (colors.length - 1))) % colors.length;
                 colorIndices[3] = (colorIndices[3] + Math.floor(1 + Math.random() * (colors.length - 1))) % colors.length;
-
             }
         }
+
+        // Add interactivity
+        $('#gradient').click(function() {
+            // Randomly shuffle the colors when clicked
+            colors = shuffleArray(colors);
+        });
+
+        // Function to shuffle an array
+        function shuffleArray(array) {
+            for (var i = array.length - 1; i > 0; i--) {
+                var j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]]; // Swap elements
+            }
+            return array;
+        }
+
         setInterval(updateGradient, 10);
     </script>
 </body>
